@@ -1,3 +1,7 @@
+2008-05-13  Martyn Russell  <martyn@imendio.com>
+
+	* src/trackerd/tracker-convert-file.c: Removed, it is not in use.
+
 2008-05-12  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/tracker-cache.[ch]: Reworked this module and
